// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Indicator as counter with 1 digit 1`] = `
<body>
  <div>
    <div
      aria-label="Counter"
      class="placementMiddle"
      role="status"
    >
      <div
        class="counter marginTop"
      >
        <div
          class="light alignCenter breakWord Text fontWeightSemiBold fontSize100"
        >
          3
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Indicator as counter with 3 digits 1`] = `
<body>
  <div>
    <div
      aria-label="Counter"
      class="placementMiddle"
      role="status"
    >
      <div
        class="counter marginTop"
      >
        <div
          class="light alignCenter breakWord Text fontWeightSemiBold fontSize100"
        >
          99+
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Indicator as notification 1`] = `
<body>
  <div>
    <div
      aria-label="Notification"
      class="notification placementMiddle"
      role="status"
    />
  </div>
</body>
`;
